# python-client

./: .gitignore  mypy.ini  pyproject.toml
.github/workflows/: python_ci.yaml
cowswap_client/: cow_client.py  encoding.py  gtypes.py
cowswap_python_client/: cow_client.py  encoding.py  gtypes.py  models.py  utils.py
tests/: conftest.py  test_cow_client.py
